# netops-assistant

./: .gitignore  .gitlab-ci.yml  MIGRATION.md  Makefile  README.md  REVIEW  RULES.md  docker-compose.yml  doctor  doctor.py  run_local.py  run_local.sh  setup_backend.sh.py  setup_local.sh  ui-preview.html  ui-variant-2.html  ui-variant-3.html
.github/workflows/: cd.yml  ci.yml
.obsidian/: workspace.json
backend/: .coverage  .env.example  DEV_BOOTSTRAP.md  Dockerfile  alembic.ini  coverage.xml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_users_and_sessions.py  0002_auth_audit_events.py  0003_add_user_role.py  0004_teams_and_members.py  0005_activity_entries.py  0006_planned_events.py  0007_report_records.py  0008_night_work_plans.py  0009_plan_templates.py  0010_access_audit_events.py  0011_journal_work_date_and_ticket_number.py  0012_report_status_draft_final.py  0013_night_work_participants.py  0014_night_work_step_collaborators.py  0015_night_work_step_handoff_to.py  0016_activity_entry_resolution.py  0017_activity_entry_contact.py  0018_add_task_url_to_activity_entries.py  0019_add_service_to_activity_entries.py  0020_add_service_filters_to_report_records.py  0021_add_study_module.py  0022_add_study_progress_fields.py  0023_add_study_plan_track.py  0024_add_study_modules.py  0025_add_work_timer.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  dashboard.py  developer.py  health.py  journal.py  planned_events.py  plans.py  reports.py  search.py  study.py  team.py  templates.py  work_timer.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  access_audit.py  auth_audit.py  journal.py  night_work.py  planned_event.py  report_record.py  study.py  team.py  template.py  user.py  user_session.py  work_timer.py
backend/app/repositories/: __init__.py  base.py  journal.py  night_work.py  planned_event.py  study.py  team.py  template.py  user.py  work_timer.py
backend/app/schemas/: auth.py  dashboard.py  journal.py  night_work.py  planned_event.py  reports.py  search.py  study.py  team.py  template.py  work_timer.py
backend/app/services/: access_audit.py  auth.py  auth_provider.py  dashboard.py  developer_metrics.py  export.py  journal.py  manager_dashboard.py  night_work.py  planned_event.py  reports.py  schema_guard.py  search.py  study.py  team.py  template.py  work_timer.py
backend/netops_assistant_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_auth_provider.py  test_auth_service.py  test_config.py  test_core_exceptions.py  test_core_logging.py  test_dashboard_analytics_service.py  test_dashboard_service.py  test_developer_metrics_service.py  test_doctor.py  test_export_service.py  test_journal_bulk_import_service.py  test_journal_schemas.py  test_journal_service.py  test_local_user_service.py  test_manager_dashboard_service.py  test_night_work_service.py  test_planned_event_conversion_service.py  test_planned_event_service.py  test_rbac.py  test_reports_service.py  test_role_policies.py  test_run_local_app.py  test_schema_guard.py  test_schemas_auth.py  test_schemas_search.py  test_schemas_template.py  test_search_service.py  test_study_service.py  test_team_reports_routes.py  test_template_service.py  test_work_timer_service.py
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  CHEATSHEET.md  CODING_RULES.md  LDAP_AUTH.md  OPERATIONS_RUNBOOK.md  PRODUCT_BACKLOG.md  PRODUCT_REQUIREMENTS_V2.md  PROJECT_AUDIT_AND_20_SPRINT_PLAN.md  PROJECT_REVIEW.md  QA_UAT.md  ROADMAP_30_SPRINTS.md  SPRINT_01_SCOPE_BASELINE.md
docs/standards/: BACKEND_RULES.md  CODE_REVIEW_CHECKLIST.md  FRONTEND_RULES.md  PR_CHECKLIST.md  RULES.md  TASK_WORKFLOW.md
frontend/: .env.example  Dockerfile  middleware.ts  next-env.d.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: collapsible-panel.tsx  confirm-dialog.tsx  dashboard-analytics.tsx  developer-user-create-form.tsx  developer-user-flash-clearer.tsx  (+27 more)
scripts/: deploy_vm.sh  run_local_app.py  smoke_backend.sh
(+62 files in other folders)
