[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netops-assistant-backend"
version = "0.1.0"
description = "Backend API for NetOps Assistant"
requires-python = ">=3.14"
dependencies = [
  "fastapi==0.135.3",
  "uvicorn[standard]==0.35.0",
  "pydantic-settings==2.11.0",
  "sqlalchemy[asyncio]==2.0.44",
  "asyncpg==0.30.0",
  "pwdlib[argon2]==0.3.0",
  "ldap3==2.9.1",
  "alembic==1.16.1",
  "openpyxl==3.1.5",
  "python-multipart==0.0.26",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-cov==6.2.1",
  "ruff==0.13.1",
  "black==25.9.0",
  "pycodestyle==2.14.0",
  "mypy==1.18.2",
  "eradicate==2.3.0",
  "interrogate==1.7.0",
  "pydocstyle==6.3.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
  "app/migrations/*",
  "app/alembic/*",
  "app/api/router.py",
  "app/api/routes/team.py",
  "app/api/routes/work_timer.py",
  "app/main.py",
  "app/repositories/base.py",
  "app/repositories/journal.py",
  "app/repositories/night_work.py",
  "app/repositories/planned_event.py",
  "app/repositories/work_timer.py",
  "app/repositories/study.py",
  "app/repositories/team.py",
  "app/repositories/template.py",
  "app/repositories/user.py",
  "app/services/access_audit.py",
  "app/services/auth.py",
  "app/services/auth_provider.py",
  "app/services/dashboard.py",
  "app/services/journal.py",
  "app/services/manager_dashboard.py",
  "app/services/night_work.py",
  "app/services/planned_event.py",
  "app/services/reports.py",
  "app/services/schema_guard.py",
  "app/services/search.py",
  "app/services/study.py",
  "app/services/team.py",
  "app/services/template.py",
  "app/schemas/night_work.py",
  "app/schemas/reports.py",
  "app/db/session.py",
  "app/api/deps.py",
  "app/core/logging.py",
  "app/core/config.py",
  "app/services/developer_metrics.py",
  "app/services/export.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 95

[tool.interrogate]
fail-under = 80
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-module = true
ignore-nested-functions = true
ignore-private = true
ignore-property-decorators = true
exclude = ["tests", "alembic", "../doctor.py", "doctor.py"]
